--- a/index.html
+++ b/index.html
@@ -1,102 +1,93 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>My Portfolio</title>
-    <meta
-      name="description"
-      content="The technical portfolio of trainee name"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- suppress FOUC-->
-    <style>
-      html {
-        animation: fade-in 1s;
-      }
-      @keyframes fade-in {
-        0% {
-          opacity: 0;
-        }
-        100% {
-          opacity: 1;
-        }
-      }
-    </style>
-    <link
-      rel="stylesheet"
-      href="style.css"
-      media="print"
-      onload="this.media='all'"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <h1>My Name</h1>
-      <nav>
-        <ul>
-          <li><a href="#about">About Me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main tabindex="0">
-      <section id="about">
-        <header><h2>About Me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>My Portfolio</title>
+  <meta name="description" content="The technical portfolio of trainee name" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <header>
+    <h1>Pedro Ricciardi</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main tabindex="0">
+    <section id="about">
+      <h2>About Me</h2>
+      <article id="personal-info">
+        <img src="./assets/pedro.jpeg" alt="picture of Pedro Ricciardi" class="polaroid">
+        <div id="about-text">
+          <p>
+            As a tech and science enthusiast, I have always loved knowing how the universe works and how I can help to
+            improve people's lives. This passion led me to choose a career as a science teacher (physics, mathematics and
+            robotics). After a few years of teaching, I realised that I had great potential to contribute to the tech
+            industry. Confident that the skills and expertise I developed add really well to the tech career, I decided to
+            migrate to it.
+          </p>
+          <p>
+            I started my studies in front-end web development with the famous triad: HTML, CSS and
+            JavaScript. Nowadays, I am fully engaged in the CYF Course, keeping React, Next.js, and Typescript on my radar.
+          </p>
+          <p>
+            Well, feel free to check out my portfolio. I'm still in the beginning, but there's already a lot of affection
+            and dedication involved. If you liked what you saw, get in touch. I am always available to help, share and learn.
+          </p>
+        </div>
+      </article>
+    </section>
+    <section id="projects">
+      <header>
+        <h2>Projects Showcase</h2>
+      </header>
+      <section id="projects-list">
+        <article class="project polaroid">
+          <img src="https://github.com/PERicci/Pomodoro-Timer/raw/main/public/screenshotPC.png"
+            alt="pomodoro timer image preview" class="project-image">
+          <h3 class="project-name">Pomodoro Timer</h3>
+          <p class="project-description">A Pomodoro Timer application built with React and TypeScript</p>
+          <section class="project-links">
+            <a href="https://github.com/PERicci/Pomodoro-Timer" target="_blank" rel="noopener noreferrer">Project</a>
+            <a href="https://pericci.github.io/Pomodoro-Timer/" target="_blank" rel="noopener noreferrer">Live Demo</a>
+          </section>
+        </article>
       </section>
-      <section id="projects">
-        <header><h2>Projects Showcase</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+    </section>
+    <section id="contact">
+      <header>
+        <h2>Contact me</h2>
+      </header>
+      <section id="contacts-info">
+        <article id="social">
+          <a href="https://github.com/PERicci" target="_blank" rel="noopener noreferrer">GitHub</a>
+          <a href="https://www.linkedin.com/in/pedro-ricciardi/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+          <a href="https://pericci.github.io/" target="_blank" rel="noopener noreferrer">More about me</a>
+        </article>
+        <article id="email">
+          <a href="mailto:riccip@outlook.com"></a>
+        </article>
       </section>
-      <section id="contact">
-        <header><h2>Contact me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
-      </section>
-    </main>
-    <footer>
-      <h3>
-        <a href="https://github.com/CodeYourFuture/Portfolio"
-          ><svg
-            focusable="false"
-            role="presentation"
-            viewbox="0 0 98 96"
-            width="48"
-            height="48"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
-              fill="currentColor"
-            />
-          </svg>
-          Read me</a
-        >
-      </h3>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer>
+    <section id="contact-mini">
+      <article id="social-mini"></article>
+      <article id="email-mini"></article>
+    </section>
+  </footer>
+</body>
+
 </html>
